add swap images in gallery folder, make and style gallery.html

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         </div>
     </header>
 
-    <section id="welcome">
+    <section >
         <!---------------------- Home/welcome page  ----------------------->
-        <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap ------->
-        <div class="container-fluid  justify-content-center home-container">
+        <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap and customized ------->
+        <div class="container-fluid  home-container">
             <div class="row">
                 <div class="col-12">
-                    <div class=" welcome-sign">
-                        <div class="welcome jumbotron text-center ">
+                    <div class="welcome-sign">
+                        <div class="welcome jumbotron text-center">
                             <h1 class="welcome-sign-top">...Unforgettable Hiking In Ireland...</h1>
                             <hr class="my-3">
-                            <p class="welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
+                            <p class="lead welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
                                 And we are striving to make it a very special one</p>
 
                             <p class="sign-button">
@@ -69,13 +69,15 @@
                         </div>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
+       
     </section>
 
     <!------------------------ About page ------------------------>
     <div id="position-about">
-        <section id="about">
+        <section>
+            <div class="about-margin">
             <div class="container">
                 <div class="row mt-5 heading-text">
                     <div class="col-12">
@@ -86,7 +88,7 @@
 
             <div class="container  about-content">
                 <div class="row  d-flex align-items-center content-item">
-                    <div class="col-md">
+                    <div class="col-12 col-md-6">
                         <div class="card card-body">
                             <img src="assets/images/about-team.jpg" class="card-img" alt="The hikers team">
                             <div class="card-desc">
@@ -94,8 +96,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md content-item-text">
-                        <h3><strong> Welcome to the Ireland hiking of our dreams, we hope yours too</strong></h3>
+                    <div class="col-12 col-md-6 content-item-text">
+                        <h3> Welcome to the Ireland hiking of our dreams, we hope yours too</h3>
                         <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you
                             would
                             like to know more about
@@ -112,6 +114,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </section>
     </div>
     
@@ -119,7 +122,7 @@
     <section id="image-tours"></section>
 
     <div id="position-tours">
-        <section id="tours">
+        <section>
             <div class="container">
                 <div class="row mt-5 heading-text">
                     <div class="col-12">
