--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home<span class="sr-only"></span></a>
+                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" id="navbar-color-about" target="_blank" href="index.html#position-about">About</a>
@@ -50,7 +50,7 @@
     </header>
         <!---------------------- Main navigation ------------------------->
     
-    <div id="position-gallery">
+    <div class="container-fluid" id="position-gallery">
     <section>
         <div class="container">
             <div class="row mt-5 heading-text">
@@ -61,52 +61,65 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/couple-in-the-car.jpg" alt="couple in the car">
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3"></div>
-                    <img src="assets/images/gallery/girl-by-the-stream.jpg" alt="girl by the stream">
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/girls-by-the-lake.jpg" alt="girls by the lake">
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/girls-camping.jpg" alt="girls camping">
+                  <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/the-girl-by-the-stream.jpg" class="image-style" alt="the girls by the stream">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/girls-on-the-mountain.jpg" alt="girls on the mountain">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-on-the-beach.jpg" class="image-style" alt="girls on the beach">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/group-on-the-mountain.jpg" alt="group on the mountain">
+               <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/mountain-view.jpg" class="image-style" alt="mountain view">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/irish-sheep.jpg" alt="irish sheep">
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-in-the-forest.jpg" class="image-style" alt="girls in the forest">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/keel-strand-sign.jpg" alt="keel strand sign">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/irish-sheep.jpg" class="image-style" alt="irish sheep">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/lunch-break.jpg" alt="lunch break">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/group-on-the-mountain.jpg" class="image-style" alt="group on the mountain">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/the-hikers-sign.jpg" alt="the hikers sign">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/couple-in-the-car.jpg" class="image-style" alt="couple in the car">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/tourist-in-santa-hat.jpg" alt="tourist in santa hat">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/wicklow-tour.jpg" class="image-style" alt="wicklow tour">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/connemara-tour.jpg" alt="connemara tour">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-by-the-lake.jpg" class="image-style" alt="girls by the lake">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/wicklow-tour.jpg" alt="wicklow tour">
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/on-the-mountain.jpg" class="image-style" alt="on the mountain">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/girls-in-the-forest.jpg" alt="girls in the forest">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/lunch-break.jpg" class="image-style" alt="lunch break">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/on-the-mountain.jpg" alt="on the mountain">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-beside-the-cross.jpg" class="image-style" alt="girls beside the cross">
                 </div>
-                <div class="col-12 col-md-6 col-xl-3">
-                    <img src="assets/images/gallery/girls-on-the-beach.jpg" alt="girls on the beach">
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/view-on-top-of-mountain.jpg" class="image-style" alt="view on top of mountain">
+                </div>
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girls-by-the-waterfall.jpg" class="image-style" alt="girls by the waterfall">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girl-on-the-beach.jpg" class="image-style" alt="girls on the beach">
+                </div>
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/our-tour-guide.jpg" class="image-style" alt="our tour guy">
+                </div>
+                 <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/girl-on-the-rock.jpg" class="image-style" alt="girls on the rock">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3 image">
+                    <img src="assets/images/gallery/keel-strand-sign.jpg" class="image-style" alt="keel strand sign">
                 </div>
             </div>
         </div>
