add media query to welcome jubbotron sign

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description"
-        content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more"/>
+    <meta name="Description" content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,12 +14,12 @@
 
 <body>
     <header>
-        <!---------------------- Site navigation ------------------------->
-        <!------- CREDIT: navbar code customized from Bootstrap 4.5 ------->
+        <!----------------------Site navigation------------------------>
+        <!-------CREDIT: navbar code customized from Bootstrap 4.5------->
         <div class="container-fluid navalert-container">
             <nav class="navbar navbar-expand-sm navbar-light fixed-top">
                 <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo.png"
-                        alt="The Hikers logo" aria-label="The hikers logo"></a>
+                        alt="The Hikers" aria-label="The hikers"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,8 +36,7 @@
                             <a class="nav-link underline" id="navbar-color-tours" href="#position-tours">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="gallery.html"
-                                target="_blank">Gallery</a>
+                            <a class="nav-link underline" id="navbar-color-gallery" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" id="navbar-color-contact" href="#position-contact">Contact</a>
@@ -49,32 +47,28 @@
         </div>
     </header>
 
-    <section >
-        <!---------------------- Home/welcome page  ----------------------->
-        <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap and customized ------->
-        <div class="container-fluid  home-container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="welcome-sign">
-                        <div class="welcome jumbotron text-center">
-                            <h1 class="welcome-sign-top">...Unforgettable Hiking In Ireland...</h1>
-                            <hr class="my-3">
+    <section class="container-fluid d-flex h-100 home-container" >
+        <!----------------------Home/welcome page----------------------->
+        <!-------CREDIT: inspiration/code snipped from Whiskey project in Bootstrap and customized------->
+        <div class="container">
+            <div class="row align-items-center h-100">
+                <div class="col-sm-12 auto-centering">
+                        <div class="jumbotron text-center">
+                            <h1 class="welcome-sign-top">Unforgettable Hiking In Ireland</h1>
+                            <hr>
                             <p class="lead welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
                                 And we are striving to make it a very special one</p>
-
                             <p class="sign-button">
                                 <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with
                                     us!</a>
                             </p>
                         </div>
-                    </div>
-                </div>
                 </div>
             </div>
-       
+        </div>
     </section>
 
-    <!------------------------ About page ------------------------>
+    <!------------------------About page------------------------>
     <div id="position-about">
         <section>
             <div class="about-margin">
@@ -118,7 +112,7 @@
         </section>
     </div>
     
-    <!------------------------ Tours page ------------------------>
+    <!------------------------Tours page------------------------>
     <section id="image-tours"></section>
 
     <div id="position-tours">
@@ -147,7 +141,7 @@
                                 <strong><i class="fas fa-envelope" aria-hidden="true"></i> Contact us </strong>
                             </a>
                                 or
-                            <a href="tel:+555 45667800" class="contact-details" aria-label="Our Phone Number">
+                            <a href="tel:+55545667800" class="contact-details" aria-label="Our Phone Number">
                                 <i class="fas fa-phone-alt" aria-hidden="true"></i> 555 4657800
                             </a>
                         </p>
@@ -162,7 +156,7 @@
                         <div class="row">
                             <div class="col-md d-flex">
                                 <div class="card card-body flex-fill">
-                                    <!------- CREDIT: Photo by Steven Hylands from Pexels ------->
+                                    <!-------CREDIT: Photo by Steven Hylands from Pexels------->
                                     <img src="assets/images/wicklow.jpg" class="card-img" alt="Wicklow mountain view">
                                     <div class="card-body-desc">
                                         <h3>Wicklow Mountain Tours</h3>
@@ -171,7 +165,7 @@
                             </div>
                             <div class="col-md d-flex">
                                 <div class="card card-body flex-fill">
-                                    <!------- CREDIT: Image by _Artemis_ from Pixabay  ------->
+                                    <!-------CREDIT: Image by _Artemis_ from Pixabay------->
                                     <img src="assets/images/connemara.jpg" class="card-img"
                                         alt="Conemara mountain view">
                                     <div class="card-desc">
@@ -182,7 +176,7 @@
 
                             <div class="col-md d-flex">
                                 <div class="card card-body flex-fill">
-                                    <!------- CREDIT: Image by Nanni05 from Pixabay   ------->
+                                    <!-------CREDIT: Image by Nanni05 from Pixabay------->
                                     <img src="assets/images/cliffs-of-moher.jpg" class="card-img"
                                         alt="Land Rover driving through mud">
                                     <div class="card-desc">
@@ -198,7 +192,7 @@
     </div>
 
 
-    <!----------------- Contact and Enquiry Form page --------------------->
+    <!-----------------Contact and Enquiry Form page--------------------->
     <section id="image-contact"></section>
 
     <div id="position-contact">
@@ -214,10 +208,10 @@
                 <div class="row content-item-text">
                     <div class="col">
                         <h2>Contact Us</h2>
-                        <p>
+                        <p class="margin-right">
                             If you would like to leave a comment for us, have a questions about our tours, or the one you are interested in,
                             fill out the contact form and write your enquiry and we will get back to you as soon as possible or <strong>Call Us:</strong> 
-                            <a href="tel:+555 45667800" class="contact-details" aria-label="Our Phone Number">
+                            <a href="tel:+55545667800" class="contact-details" aria-label="Our Phone Number">
                                 <i class="fas fa-phone-alt" aria-hidden="true"></i> 555 4657800
                             </a>or 
                             Join our group on Facebook or Instagram if you would like to follow our latest tours.
@@ -225,7 +219,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container mb-5">
                 <div class="col">
                     <form id="contact-form" autocomplete="off" aria-label="contact form">
                         <fieldset>
@@ -276,7 +270,7 @@
         </section>
     </div>
 
-    <!----------------- Footer page --------------------->
+    <!-----------------Footer page--------------------->
     <footer>
         <div class="contact">
             <ul class="contact-links">
@@ -287,7 +281,7 @@
                     </a>
                 </li>
                 <li class="contact-links-item">
-                    <a href="tel:+555 4567800" aria-label="Our Phone Number">
+                    <a href="tel:+5554567800" aria-label="Our Phone Number">
                         <i class="fas fa-phone-alt" aria-hidden="true"></i>
                         555 4657800
                     </a>
