--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description"
-        content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
+    <meta name="Description" content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -28,20 +27,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home <span class="sr-only"></span></a>
+                            <a class="nav-link underline" id="navbar-color-home"  href="index.html">Home <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" target="_blank" href="index.html#position-about">About</a>
+                            <a class="nav-link underline" id="navbar-color-about"  href="index.html#position-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-tours" target="_blank" href="index.html#position-tours">Tours</a>
+                            <a class="nav-link underline" id="navbar-color-tours"  href="index.html#position-tours">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" target="_blank" href="#">Gallery<span
+                            <a class="nav-link underline" id="navbar-color-gallery" href="#">Gallery<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" target="_blank" href="index.html#position-contact">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact" href="index.html#position-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +49,7 @@
     </header>
         <!---------------------- Main navigation ------------------------->
     
-    <div class="container-fluid" id="position-gallery">
+    <div id="position-gallery">
     <section>
         <div class="container">
             <div class="row mt-5 heading-text">
@@ -62,7 +61,9 @@
         <div class="container">
             <div class="row">
                  <div class="col-12 col-md-6 col-xl-3 image">
+                     <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
+                    </a>
                 </div>
                  <div class="col-12 col-md-6 col-xl-3 image">
                     <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
