--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                             we will select and organize a trip for you. The price is estimated depending on the number
                             of days you choose, season, accommodation and food you choose. Tell us what you expect and
                             we
-                            will organize a trip for you.<br>for more information
+                            will organize a trip for you. <br>For more information:<br>
                             <a href="#position-contact" class="contact-details" aria-label="Our contact link">
-                                <strong><i class="fas fa-envelope" aria-hidden="true"></i> Contact us </strong>
-                            </a>
-                                or
+                                <strong><i class="fas fa-envelope" aria-hidden="true"></i> Contact Us </strong>
+                            </a><br>
+                                
                             <a href="tel:+55545667800" class="contact-details" aria-label="Our Phone Number">
                                 <i class="fas fa-phone-alt" aria-hidden="true"></i> 555 4657800
                             </a>
@@ -151,7 +151,7 @@
 
             <div class="container">
                 <div class="row my-4">
-                    <div class="col"></div>
+                    <div class="col">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md d-flex">
@@ -188,6 +188,7 @@
                     </div>
                 </div>
             </div>
+        </div> 
         </section>
     </div>
 
@@ -208,7 +209,7 @@
                 <div class="row content-item-text">
                     <div class="col">
                         <h2>Contact Us</h2>
-                        <p class="margin-right">
+                        <p>
                             If you would like to leave a comment for us, have a questions about our tours, or the one you are interested in,
                             fill out the contact form and write your enquiry and we will get back to you as soon as possible or <strong>Call Us:</strong> 
                             <a href="tel:+55545667800" class="contact-details" aria-label="Our Phone Number">
@@ -222,48 +223,45 @@
             <div class="container mb-5">
                 <div class="col">
                     <form id="contact-form" autocomplete="off" aria-label="contact form">
-                        <fieldset>
-                            <legend>Contact form</legend>
-                            <div class="form-group">
-                                <label for="full-name">Your Full Name:</label>
-                                <input type="text" class="input-box" id="full-name" name="full-name"
-                                    placeholder="Your full name..." required>
+                        <div class="form-group">
+                            <label for="full-name">Your Full Name:</label>
+                            <input type="text" class="input-box" id="full-name" name="full-name"
+                                placeholder="Your full name..." required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email address:</label>
+                            <input type="text" class="input-box" id="email" name="email"
+                                placeholder="Your email address..." required>
+                        </div>
+                        <div class="form-group">
+                            <label for="tour">Tours available</label>
+                            <select id="tour" name="tour" class="input-box">
+                                <option value="wicklow-tour">Wicklow mountain tour</option>
+                                <option value="connemara-tour">Conemara mountain tour</option>
+                                <option value="cliffs-of-moher-tour">Cliffs of moher tour</option>
+                                <option value="other-tour">Other tour</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <select id="subject" name="subject" class="input-box">
+                                <option value="tours">Enquire about tours available</option>
+                                <option value="different-tour">Enquire about different tour</option>
+                                <option value="testimonials">Write testimonial</option>
+                                <option value="other-tour">Other query</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="text">Your Message </label>
+                            <textarea id="text" name="text" class="input-box" cols="40" rows="10"
+                                placeholder="Your enquire/comment/ here..."></textarea>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary  btn-lg contact-sent-btn" value="Send"
+                                    aria-label="Send Form">Send</button>
                             </div>
-                            <div class="form-group">
-                                <label for="email">Email address:</label>
-                                <input type="text" class="input-box" id="email" name="email"
-                                    placeholder="Your email address..." required>
-                            </div>
-                            <div class="form-group">
-                                <label for="tour">Tours available</label>
-                                <select id="tour" name="tour" class="input-box">
-                                    <option value="wicklow-tour">Wicklow mountain tour</option>
-                                    <option value="connemara-tour">Conemara mountain tour</option>
-                                    <option value="cliffs-of-moher-tour">Cliffs of moher tour</option>
-                                    <option value="other-tour">Other tour</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="subject">Subject</label>
-                                <select id="subject" name="subject" class="input-box">
-                                    <option value="tours">Enquire about tours available</option>
-                                    <option value="different-tour">Enquire about different tour</option>
-                                    <option value="testimonials">Write testimonial</option>
-                                    <option value="other-tour">Other query</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label for="text">Your Message </label>
-                                <textarea id="text" name="text" class="input-box" cols="40" rows="10"
-                                    placeholder="Your enquire/comment/ here..."></textarea>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12 text-center">
-                                    <button type="submit" class="btn btn-primary  btn-lg contact-sent-btn" value="Send"
-                                        aria-label="Send Form">Send</button>
-                                </div>
-                            </div>
-                        </fieldset>
+                        </div>
                     </form>
                 </div>
             </div>
