add style and media queries to About section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <hr>
                             <p class="lead welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
                                 And we are striving to make it a very special one</p>
-                            <p class="sign-button">
-                                <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with
+                            <p>
+                                <a class="btn btn-primary btn-lg btn-style" href="#position-contact" role="button">Book a tour with
                                     us!</a>
                             </p>
                         </div>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 content-item-text">
-                        <h3> Welcome to the Ireland hiking of our dreams, we hope yours too</h3>
+                        <h4> Welcome to the Ireland hiking of our dreams,<br> we hope yours too</h4>
                         <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you
                             would
                             like to know more about
@@ -104,7 +104,7 @@
                             Ireland,
                             can tell you many interesting stories about this beautiful, scenic and wonderful country.
                         </p>
-                        <p>We hope to see you soon on one of our trips</p>
+                        <p><strong style="font-weight: 400;">We hope to see you soon on one of our trips</strong></p>
                     </div>
                 </div>
             </div>
