--- a/gallery.html
+++ b/gallery.html
@@ -27,20 +27,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home"  href="index.html">Home <span class="sr-only"></span></a>
+                            <a class="nav-link" id="navbar-color-home"  href="index.html">Home <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about"  href="index.html#position-about">About</a>
+                            <a class="nav-link" id="navbar-color-about"  href="index.html#position-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-tours"  href="index.html#position-tours">Tours</a>
+                            <a class="nav-link" id="navbar-color-tours"  href="index.html#position-tours">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="#">Gallery<span
+                            <a class="nav-link" id="navbar-color-gallery" href="#">Gallery<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" href="index.html#position-contact">Contact</a>
+                            <a class="nav-link" id="navbar-color-contact" href="index.html#position-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
