--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" href="#">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" id="navbar-color-home" href="#">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" href="#position-about">About</a>
+                            <a class="nav-link" id="navbar-color-about" href="#position-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-tours" href="#position-tours">Tours</a>
+                            <a class="nav-link" id="navbar-color-tours" href="#position-tours">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="gallery.html">Gallery</a>
+                            <a class="nav-link" id="navbar-color-gallery" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" href="#position-contact">Contact</a>
+                            <a class="nav-link" id="navbar-color-contact" href="#position-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
