add solve problem with horizontal scroll

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
 
             <div class="container">
-                <div class="row my-5 content-item-text">
+                <div class="row my-5 content-item-text tours-style">
                     <div class="col-12">
                         <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
                         <p> We are organizing hiking tours from half day up to three days including a certified tour
@@ -270,6 +270,7 @@
 
     <!-----------------Footer page--------------------->
     <footer>
+    
         <div class="contact">
             <ul class="contact-links">
                 <li class="contact-links-item">
